Added title in the navbar

--- a/Music.html
+++ b/Music.html
@@ -11,6 +11,7 @@
 <body>
   <header>
     <div class="logo">Musico</div>
+    <p>This is a new change</p>
     
     <div class="new-buttons">
       <button onclick="openSignIn()">Sign In</button>
